--- a/src/styles/TextBlock.css
+++ b/src/styles/TextBlock.css
@@ -7,14 +7,22 @@
   flex-grow: 1;
   flex-basis: 0;
   box-sizing: border-box;
+
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex-start;
   text-align: left;
 }
 
 .text-block-content {
   font-size: 1.125rem;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.text-block.side-by-side .text-block-content {
+  margin: 0 auto;
 }
 
 .text-block-content h3 {
@@ -39,8 +47,8 @@
 }
 
 .text-block-icon.side {
-  font-size: 10rem;
-  text-align: center;
+  font-size: 5rem;
+  flex-shrink: 0;
 }
 
 .text-block.side-by-side .text-block-content {
